--- a/rtorrent.rc.template
+++ b/rtorrent.rc.template
@@ -76,11 +76,11 @@ download_rate = 0
 # max mapped memory 
 # nb does not refer to physical memory 
 # max_memory_usage = 3500M 
-pieces.memory.max.set = 3500M 
+pieces.memory.max.set = 4G 
  
 # max number of files to keep open simultaneously 
 # max_open_files = 192 
-network.max_open_files.set = 20
+network.max_open_files.set = 192
  
 # max_open_http = 32 
 network.http.max_open.set = 32
@@ -205,8 +205,8 @@ pieces.preload.type.set = 0
 ###pieces.preload.type.set szerk 1-ről 0
 pieces.preload.min_size.set = 262144
 pieces.preload.min_rate.set = 5120
-network.send_buffer.size.set = 0
-network.receive_buffer.size.set = 0
+network.send_buffer.size.set = 4M
+network.receive_buffer.size.set = 4M
 
 pieces.sync.always_safe.set = no
 pieces.sync.timeout.set = 600
