--- a/restartSeedbox.template
+++ b/restartSeedbox.template
@@ -30,15 +30,15 @@ sleep 3
 echo "Start rTorrent..."
 screen -d -m -S rtorrent rtorrent
 
-### sleep 3
-### echo "Start IRSSI..."
-### screen -d -m -S irssi irssi
+sleep 3
+echo "Start IRSSI..."
+screen -d -m -S irssi irssi
 
-### if [[ -a /etc/seedbox-from-scratch/sabnzbd/SABnzbd.py ]]; then
-###   sleep 3
-###   echo "Start sabnzbdplus..."
-###   /etc/seedbox-from-scratch/sabnzbd/SABnzbd.py --server 0.0.0.0:<http_port> --daemon --config-file=<homedir>/.sabnzbd/sabnzbd.ini --logging 2 --https <https_port>
-### fi
+if [[ -a /etc/seedbox-from-scratch/sabnzbd/SABnzbd.py ]]; then
+   sleep 3
+   echo "Start sabnzbdplus..."
+   /etc/seedbox-from-scratch/sabnzbd/SABnzbd.py --server 0.0.0.0:<http_port> --daemon --config-file=<homedir>/.sabnzbd/sabnzbd.ini --logging 2 --https <https_port>
+fi
 
 if [[ -a $HOME/.config/deluge/web.conf ]]; then
   sleep 3
