--- a/utserver.conf
+++ b/utserver.conf
@@ -8,7 +8,7 @@ dir_autoload: /home/<username>/downloads/manual/watch/
 dir_request: /home/<username>/downloads/manual/request/
 admin_name: admin
 admin_password: 
-ut_webui_dir: /home/$UtorrentUser/.utserver/
+ut_webui_dir: /home/<username>/.utserver/
 low_cpu: 1
 prealloc_space: 1
 randomize_bind_port: 1
