--- a/default_deluge.conf
+++ b/default_deluge.conf
@@ -4,7 +4,7 @@
 }{
   "port": 8112,
   "enabled_plugins": [],
-  "pwd_sha1": "<sha-password>",
+  "pwd_sha1": "9ed5f25ab6bc9aba843e0c12022d21d37ea78503",
   "theme": "gray",
   "show_sidebar": true,
   "sidebar_show_zero": false,
@@ -12,7 +12,7 @@
   "cert": "ssl/daemon.cert",
   "https": true,
   "base": "/",
-  "pwd_salt": "<salt>",
+  "pwd_salt": "856ee4cb06511bb754bff436fcf95822893c2293",
   "show_session_speed": false,
   "first_login": false,
   "session_timeout": 3600,
