--- a/proftpd_proftpd.conf
+++ b/proftpd_proftpd.conf
@@ -31,7 +31,7 @@ ListOptions                	"-l"
 DenyFilter			\*.*/
 
 # Use this to jail all users in their homes 
-DefaultRoot			~/downloads/manual/
+DefaultRoot			~/downloads/
 AllowForeignAddress 	on
 
 # Users require a valid shell listed in /etc/shells to login.
