--- a/proftpd_proftpd.conf
+++ b/proftpd_proftpd.conf
@@ -12,7 +12,7 @@ UseIPv6				on
 # If set on you can experience a longer connection delay in many cases.
 IdentLookups			off
 
-ServerName			"Host Dzire server"
+ServerName			"Seedbox Server"
 ServerType			standalone
 DeferWelcome			off
 
